--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tiptap/extension-heading": "^2.6.5",
     "@tiptap/extension-image": "^2.6.5",
     "@tiptap/extension-italic": "^2.6.5",
+    "@tiptap/extension-link": "^2.9.1",
     "@tiptap/extension-list-item": "^2.6.5",
     "@tiptap/extension-ordered-list": "^2.6.5",
     "@tiptap/extension-paragraph": "^2.6.5",
