--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_API_URL=http://localhost:5000/
 
-NEXT_PUBLIC_API_URL2=https://carport-email.onrender.com/
+NEXT_PUBLIC_API_URL2=https://carport-email.vercel.app/
